--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "got": "^9.6.0",
     "http-status-codes": "^1.3.2",
     "morgan": "^1.9.1"
   },
