--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "mocha": "^6.0.2",
+    "nock": "^10.0.6",
     "nodemon": "^1.18.10",
     "nyc": "^13.3.0"
   }
