--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
-    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "got": "^9.6.0",
     "http-status-codes": "^1.3.2",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "pug": "^2.0.3"
   },
   "devDependencies": {
     "chai": "^4.2.0",
