--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "got": "^9.6.0",
     "http-status-codes": "^1.3.2",
     "morgan": "^1.9.1",
+    "node-sass-middleware": "^0.11.0",
     "pug": "^2.0.3"
   },
   "devDependencies": {
